--- a/html/aboutme.html
+++ b/html/aboutme.html
@@ -8,7 +8,7 @@
 </head>
     <nav>
       <ul>
-        <li><a href="../profile.html">Home</a></li>
+        <li><a href="../index.html">Home</a></li>
         <li><a href="#">About me</a></li>
         <li><a href="./portfolio.html">Portfolio</a></li>
         <li><a href="./blog.html">Blog</a></li>
