--- a/html/aboutme.html
+++ b/html/aboutme.html
@@ -4,6 +4,7 @@
 <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <link href="../css/contactme.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, minimum-scale=1.0">
 </head>
 </head>
     <nav>
@@ -20,9 +21,9 @@
         <div class="title">
             <span></span>
             <span><a target="_blanck" href="salfia.com">About</a></span>
-            <br><br><br>
+            <br><br>
         <div class ="details">
-            <br><br> 
+            <br>
             <a target="_blanck" href=""><span>An avid enthusiast of complex software solutions.</span></a>
             <br><br>           
             <a target="_blanck" href=""><span>Backend developer with experience in fintech.</span></a> 
