--- a/html/contactme.html
+++ b/html/contactme.html
@@ -4,6 +4,7 @@
 <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <link href="../css/contactme.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, minimum-scale=1.0">
 </head>
 </head>
     <nav>
@@ -20,7 +21,7 @@
         <div class="title">
             <span></span>
             <span><a target="_blanck" href="salfia.com">Contact</a></span>
-            <br><br><br>
+            <br><br>
         <div class ="details">
             <br><br> 
             <a  href="https://www.linkedin.com/in/kiran-shankar-k-098a20206/"><span>LinkedIn</span></a>
