--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -26,13 +26,13 @@
             <br>
             <a target="_blanck" href=""><span>Node.js</span></a>
             <br><br>           
-            <a target="_blanck" href=""><span>Typescript</span></a> 
+            <a target="_blanck" href=""><span>Typescript, Javascript</span></a> 
             <br><br> 
-            <a target="_blanck" href=""><span>REST / MICROSERVICES</span></a>
+            <a target="_blanck" href=""><span>REST / MICROSERVICES </span></a>
             <br><br>           
             <a target="_blanck" href=""><span>EXPRESSJS / NESTJS</span></a> 
-            <br><br> 
-            <a target="_blanck" href=""><span>MYSQL / MONGODB</span></a>
+            <!-- <br><br> 
+            <a target="_blanck" href=""><span></span></a> -->
         </div>
        
         </div>
