--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -31,8 +31,8 @@
             <a target="_blanck" href=""><span>REST / MICROSERVICES </span></a>
             <br><br>           
             <a target="_blanck" href=""><span>EXPRESSJS / NESTJS</span></a> 
-            <!-- <br><br> 
-            <a target="_blanck" href=""><span></span></a> -->
+            <br><br> 
+            <a target="_blanck" href=""><span>MYSQL / MSSQL / MONGODB</span></a>
         </div>
        
         </div>
